--- a/terraform/environments/staging/terraform.tfvars.example
+++ b/terraform/environments/staging/terraform.tfvars.example
@@ -1,3 +1,8 @@
 aws_region  = "us-east-1"
 aws_profile = "my-aws-profile"
-ops_name    = "init-full-stack-ops"
+namespace    = "init-full-stack-ops"
+state_bucket_ops     = "bucket"
+state_bucket_key_ops = "key"
+allowed_ssh_ip       = "1.2.3.4"
+ssh_key_pair = "my-shh-key-pair-name"
+ec2_ami = "ami-123456789"
