added https via caddy

--- a/terraform/environments/staging/terraform.tfvars.example
+++ b/terraform/environments/staging/terraform.tfvars.example
@@ -6,3 +6,4 @@ state_bucket_key_ops = "key"
 allowed_ssh_ip       = "1.2.3.4"
 ssh_key_pair = "my-shh-key-pair-name"
 ec2_ami = "ami-123456789"
+app_domain = "example.com"
