--- a/terraform/environments/staging/terraform.tfvars.example
+++ b/terraform/environments/staging/terraform.tfvars.example
@@ -7,3 +7,5 @@ allowed_ssh_ip       = "1.2.3.4"
 ssh_key_pair = "my-shh-key-pair-name"
 ec2_ami = "ami-123456789"
 app_domain = "example.com"
+caddy_ecr_image = 
+aws_account_id = "123456789"
