--- a/terraform/environments/staging/terraform.tfvars.example
+++ b/terraform/environments/staging/terraform.tfvars.example
@@ -8,4 +8,5 @@ ssh_key_pair = "my-shh-key-pair-name"
 ec2_ami = "ami-123456789"
 app_domain = "example.com"
 caddy_ecr_image = 
+app_ecr_image = 
 aws_account_id = "123456789"
