added tailwind to dockerfile

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ APP_VERSION=
 # CI/CD
 APP_AWS_ACCOUNT_ID=
 APP_ECR_REPO=
+APP_LOCAL_CONTAINER_NAME=init-full-stack-app-1
+
+# AWS
+AWS_PROFILE=my-aws-profile
+AWS_REGION=us-east-1
+AWS_ACCOUNT_ID=
