--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ APP_LOCAL_CONTAINER_NAME=init-full-stack-app-1
 AWS_PROFILE=my-aws-profile
 AWS_REGION=us-east-1
 AWS_ACCOUNT_ID=
+
+# OAuth
+APP_OAUTH_CLIENT_ID=
+APP_OAUTH_CLIENT_SECRET=
+APP_OAUTH_DOMAIN=
+APP_OAUTH_SCOPE=
+APP_OAUTH_CALLBACK_URL=
+APP_OAUTH_AUDIENCE=
