--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,8 @@ AWS_ACCOUNT_ID=
 # OAuth
 APP_OAUTH_CLIENT_ID=
 APP_OAUTH_CLIENT_SECRET=
-APP_OAUTH_DOMAIN=
-APP_OAUTH_SCOPE=
-APP_OAUTH_CALLBACK_URL=
+APP_OAUTH_DOMAIN="<my-cognito-domain>.auth.us-east-1.amazoncognito.com"
+APP_OAUTH_SCOPE="openid profile email"
+APP_OAUTH_CALLBACK_URL=http://localhost:8000/api/callback
+APP_OAUTH_LOGOUT_REDIRECT_URL=http://localhost:8000/
 APP_OAUTH_AUDIENCE=
