verify token using jwks

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ APP_OAUTH_SCOPE="openid profile email"
 APP_OAUTH_CALLBACK_URL=http://localhost:8000/api/callback
 APP_OAUTH_LOGOUT_REDIRECT_URL=http://localhost:8000/
 APP_OAUTH_AUDIENCE=
+APP_OAUTH_JWKS_URL="https://cognito-idp.{region}.amazonaws.com/{userPoolId}/.well-known/jwks.json"
