Add user login (#1)
* added login

* implemented logout handler

* verify token using jwks

* pulling config parameters from SSM parameter

* updated terraform to use remote config

* now pulling config from parameter store

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,13 @@ APP_LOCAL_CONTAINER_NAME=init-full-stack-app-1
 AWS_PROFILE=my-aws-profile
 AWS_REGION=us-east-1
 AWS_ACCOUNT_ID=
+
+# OAuth
+APP_OAUTH_CLIENT_ID=
+APP_OAUTH_CLIENT_SECRET=
+APP_OAUTH_DOMAIN="<my-cognito-domain>.auth.us-east-1.amazoncognito.com"
+APP_OAUTH_SCOPE="openid profile email"
+APP_OAUTH_CALLBACK_URL=http://localhost:8000/api/callback
+APP_OAUTH_LOGOUT_REDIRECT_URL=http://localhost:8000/
+APP_OAUTH_AUDIENCE=
+APP_OAUTH_JWKS_URL="https://cognito-idp.{region}.amazonaws.com/{userPoolId}/.well-known/jwks.json"
