added goose migrations for initial data

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,9 @@ APP_OAUTH_CALLBACK_URL=http://localhost:8000/api/callback
 APP_OAUTH_LOGOUT_REDIRECT_URL=http://localhost:8000/
 APP_OAUTH_AUDIENCE=
 APP_OAUTH_JWKS_URL="https://cognito-idp.{region}.amazonaws.com/{userPoolId}/.well-known/jwks.json"
+
+# Database
+APP_DB_PORT=5433
+APP_DB_NAME=widget
+APP_DB_USER=postgres
+APP_DB_PASSWORD=
