--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,20 @@
+version: '3.8'
+
+name: init-full-stack-db
 
 services:
-  app:
-    image: init-full-stack:$APP_VERSION
-    build:
-      context: .
-      platforms:
-        - linux/amd64
+  postgres:
+    image: postgres:17
     ports:
-      - "8000:8000"
+      - $APP_DB_PORT:5432      
+    volumes:
+      - db-data:/var/lib/postgresql/data
     env_file:
       - .env
+    environment:
+      POSTGRES_DB: $APP_DB_NAME
+      POSTGRES_USER: $APP_DB_USER
+      POSTGRES_PASSWORD: $APP_DB_PASSWORD    
+
+volumes:
+  db-data:
